src/test/deca/syntax/valid/ourTests/test_if_else.deca
{
   int x = 0;
   if ( x == 0){
    println("if");
   } else if (x == 2){
    println("else if num 1");
   } else if ( x == 0){
    println("else if num 2");
   }else{
    println("else");
   }
}