src/test/deca/syntax/invalid/ourTests/test_else_inside_if.deca
{
    if (true){
        println("grande");
        else{
            println("erreur");
        }
    }
}